refactor: Position 객체 메소드 수정으로 인한 변경
- 기존 of에서 move로 수정
- Optinal객체로 바뀜에 따라 메소드 수정