@@ -3,16 +3,27 @@ package janggi.domain.piece.strategy;
 import janggi.domain.Path;
 import janggi.domain.Position;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public class AdvisorStrategy implements MoveStrategy{
     @Override
     public List<Path> findMovablePaths(Position current) {
-        return List.of(
-                new Path(List.of(), Position.of(current.row() + 1, current.column())),
-                new Path(List.of(), Position.of(current.row() - 1, current.column())),
-                new Path(List.of(), Position.of(current.row(), current.column() + 1)),
-                new Path(List.of(), Position.of(current.row(), current.column() - 1))
-        );
+
+        List<Path> paths = new ArrayList<>();
+
+        addPath(paths, current, 1, 0);
+        addPath(paths, current, -1, 0);
+        addPath(paths, current, 0, +1);
+        addPath(paths, current, 0, -1);
+
+        return Collections.unmodifiableList(paths);
+    }
+
+    private void addPath(List<Path> paths, Position current, int destRow, int destCol) {
+        current.move(destRow, destCol)
+                .map(dest -> new Path(List.of(), dest))
+                .ifPresent(paths::add);
     }
 }
