@@ -3,44 +3,33 @@ package janggi.domain.piece.strategy;
 import janggi.domain.Path;
 import janggi.domain.Position;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public class ElephantStrategy implements MoveStrategy{
     @Override
     public List<Path> findMovablePaths(Position current) {
-        return List.of(
-                new Path(
-                        List.of(Position.of(current.row() + 1, current.column()),
-                                Position.of(current.row() + 2, current.column() + 1)),
-                        Position.of(current.row() + 3, current.column() + 2)),
-                new Path(
-                        List.of(Position.of(current.row(), current.column() + 1),
-                                Position.of(current.row() + 1, current.column() + 2)),
-                        Position.of(current.row() + 2, current.column() + 3)),
-                new Path(
-                        List.of(Position.of(current.row(), current.column() + 1),
-                                Position.of(current.row() - 1, current.column() + 2)),
-                        Position.of(current.row() - 2, current.column() + 3)),
-                new Path(
-                        List.of(Position.of(current.row() - 1, current.column()),
-                                Position.of(current.row() - 2, current.column() + 1)),
-                        Position.of(current.row() - 3, current.column() + 2)),
-                new Path(
-                        List.of(Position.of(current.row() + 1, current.column()),
-                                Position.of(current.row() + 2, current.column() - 1)),
-                        Position.of(current.row() + 3, current.column() - 2)),
-                new Path(
-                        List.of(
-                                Position.of(current.row(), current.column() - 1),
-                                Position.of(current.row() + 1, current.column() - 2)),
-                        Position.of(current.row() + 2, current.column() - 3)),
-                new Path(
-                        List.of(Position.of(current.row(), current.column() - 1),
-                                Position.of(current.row() - 1, current.column() - 2)),
-                        Position.of(current.row() - 2, current.column() - 3)),
-                new Path(
-                        List.of(Position.of(current.row() - 1, current.column()),
-                                Position.of(current.row() - 2, current.column() - 1)),
-                        Position.of(current.row() - 3, current.column() - 2)));
+        List<Path> paths = new ArrayList<>();
+        addPath(paths, current,1, 0, 2, 1, 3, 2);
+        addPath(paths, current, 0, 1, 1, 2, 2, 3);
+        addPath(paths, current, 0, 1, -1, 2, -2, 3);
+        addPath(paths, current,-1, 0, -2, 1, -3, 2);
+        addPath(paths, current,1, 0, 2, -1, 3, -2);
+        addPath(paths, current,0, -1, 1, -2, 2, -3);
+        addPath(paths, current,0, -1, -1, -2, -2, -3);
+        addPath(paths, current,-1, 0, -2, -1, -3, -2);
+        return Collections.unmodifiableList(paths);
+    }
+
+    private void addPath(List<Path> paths, Position current,
+                         int routeRow1, int routeCol1,
+                         int routeRow2, int routeCol2,
+                         int destRow, int destCol) {
+        current.move(routeRow1, routeCol1)
+                .flatMap(route1 -> current.move(routeRow2, routeCol2)
+                        .flatMap(route2 -> current.move(destRow, destCol)
+                                .map(dest -> new Path(List.of(route1, route2), dest))))
+                .ifPresent(paths::add);
     }
 }
